--- a/ClaudinhoEnterpriseApp/wwwroot/css/style.css
+++ b/ClaudinhoEnterpriseApp/wwwroot/css/style.css
@@ -9,10 +9,27 @@
     margin-bottom: 2rem;
 }
 
-.a{
-    color: black; 
+.a {
+    color: black;
     text-decoration: none;
 }
-.a:hover{
+
+.a:hover {
     color: rgb(46, 46, 46);
+}
+
+#LinksNav:hover {
+    color: #fff;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
 }
