Atualizações no mvc

--- a/ClaudinhoEnterpriseApp/Views/Shared/_Layout.cshtml
+++ b/ClaudinhoEnterpriseApp/Views/Shared/_Layout.cshtml
@@ -60,6 +60,13 @@
                                         <li>
                                             <a class="dropdown-item" href="/Usuario/ListaUsuarios">Lista de Usuario</a>
                                         </li>
+
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="/Contato/ListaContatos">Mensagem de contato</a>
+                                        </li>
                                     }
 
                                         <li>
