--- a/ClaudinhoEnterpriseApp/Views/Usuario/Editar.cshtml
+++ b/ClaudinhoEnterpriseApp/Views/Usuario/Editar.cshtml
@@ -22,12 +22,12 @@
             <span asp-validation-for="email" class="text-danger"></span>
         </div>
 
-        <!--<div class="mb-3">
+        <div class="mb-3">
             <label asp-for="senha" class="form-label">Senha</label>
             <input asp-for="senha" class="form-control" type="password" />
             <span asp-validation-for="senha" class="text-danger"></span>
         </div>
-        -->
+        
         <div class="mb-3">
             <label asp-for="TipoDeUsuario" class="form-label">Tipo de Usuário</label>
             <input asp-for="TipoDeUsuario" class="form-control" />
