Ajuste no models, controllers e views

--- a/ClaudinhoEnterpriseApp/Views/Shared/_Layout.cshtml
+++ b/ClaudinhoEnterpriseApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
     <header>
         <!-- Navegação -->
         <nav id="navbarScrollSpy" class="navbar navbar-expand-lg navbar-dark bg-info sticky-top">
-            <div class="container">
+h            <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="/">
                     <img src="~/images/logo.png" alt="Logo" class="me-2" style="width: 40px;">
                     <div>
